--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 </head>
 <body>
 
+<header>
   <div class="masthead">
     <h1>
       <img alt="" src="images/logo.svg">
@@ -22,7 +23,9 @@
       </ul>
     </div>
   </div>
+</header>
 
+<main>
   <div role="main">
 
     <div class="banner">
@@ -44,10 +47,13 @@
     </div>
 
   </div>
+</main>
 
+<footer>
   <div class="footer">
     <p>© Arrrgene’s Treasure Tours</p>
   </div>
+</footer>
 
 </body>
 </html>
