--- a/index.html
+++ b/index.html
@@ -9,51 +9,53 @@
 </head>
 <body>
 
-<header>
-  <div class="masthead">
-    <h1>
-      <img alt="" src="images/logo.svg">
-      <span>Arrrgene’s Treasure Tours</span>
-    </h1>
-    <div class="nav" role="navigation">
-      <ul>
-        <li><a href="#">Tours</a></li>
-        <li><a href="#">Ships</a></li>
-        <li><a href="#">Tickets</a></li>
-      </ul>
-    </div>
-  </div>
-</header>
-
-<main>
-  <div role="main">
-
-    <div class="banner">
-      <img alt="" src="images/banner.jpg">
-      <div>
-        <h2>Ahoy, me Hearties!</h2>
-        <p>Batten down the hatches and sail me corsair to plentiful doubloons.</p>
-        <a href="#">Book a tour</a>
+  <header role="banner">
+    <nav>
+    <div class="masthead">
+      <h1>
+        <img alt="" src="images/logo.svg">
+        <span>Arrrgene’s Treasure Tours</span>
+      </h1>
+      <div class="nav" role="navigation">
+        <ul>
+          <li><a href="#">Tours</a></li>
+          <li><a href="#">Ships</a></li>
+          <li><a href="#">Tickets</a></li>
+        </ul>
       </div>
     </div>
+  </nav>
+  </header>
 
-    <div class="ship">
-      <div class="card">
-        <img alt="" src="images/ship.svg">
-        <h2>Heave Ho!</h2>
-        <p>Weigh anchor and hoist the mizzen, ya old salt, aboard shipshape <i>Arrrgonaut</i>.</p>
-        <a href="#">See the specs</a>
+  <main>
+    <div role="main">
+
+      <div class="banner">
+        <img alt="" src="images/banner.jpg">
+        <div>
+          <h2>Ahoy, me Hearties!</h2>
+          <p>Batten down the hatches and sail me corsair to plentiful doubloons.</p>
+          <a href="#">Book a tour</a>
+        </div>
       </div>
+
+      <div class="ship">
+        <div class="card">
+          <img alt="" src="images/ship.svg">
+          <h2>Heave Ho!</h2>
+          <p>Weigh anchor and hoist the mizzen, ya old salt, aboard shipshape <i>Arrrgonaut</i>.</p>
+          <a href="#">See the specs</a>
+        </div>
+      </div>
+
     </div>
+  </main>
 
-  </div>
-</main>
-
-<footer>
-  <div class="footer">
-    <p>© Arrrgene’s Treasure Tours</p>
-  </div>
-</footer>
+  <footer>
+    <div class="footer">
+      <p>© Arrrgene’s Treasure Tours</p>
+    </div>
+  </footer>
 
 </body>
 </html>
