Add tags to html

--- a/index.html
+++ b/index.html
@@ -10,21 +10,21 @@
 <body>
 
   <header role="banner">
-    <nav>
-    <div class="masthead">
-      <h1>
-        <img alt="" src="images/logo.svg">
-        <span>Arrrgene’s Treasure Tours</span>
-      </h1>
-      <div class="nav" role="navigation">
-        <ul>
-          <li><a href="#">Tours</a></li>
-          <li><a href="#">Ships</a></li>
-          <li><a href="#">Tickets</a></li>
-        </ul>
+    <nav role="navigation">
+      <div class="masthead">
+        <h1>
+          <img alt="" src="images/logo.svg">
+          <span>Arrrgene’s Treasure Tours</span>
+        </h1>
+        <div class="nav" role="navigation">
+          <ul>
+            <li><a href="#">Tours</a></li>
+            <li><a href="#">Ships</a></li>
+            <li><a href="#">Tickets</a></li>
+          </ul>
+        </div>
       </div>
-    </div>
-  </nav>
+    </nav>
   </header>
 
   <main>
