Add tags to html

--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
     <nav role="navigation">
       <div class="masthead">
         <h1>
-          <img alt="" src="images/logo.svg">
+          <img alt="logo" src="images/logo.svg">
           <span>Arrrgene’s Treasure Tours</span>
         </h1>
-        <div class="nav" role="navigation">
+        <div class="nav">
           <ul>
             <li><a href="#">Tours</a></li>
             <li><a href="#">Ships</a></li>
@@ -31,7 +31,7 @@
     <div role="main">
 
       <div class="banner">
-        <img alt="" src="images/banner.jpg">
+        <img alt="banner" src="images/banner.jpg">
         <div>
           <h2>Ahoy, me Hearties!</h2>
           <p>Batten down the hatches and sail me corsair to plentiful doubloons.</p>
@@ -41,7 +41,7 @@
 
       <div class="ship">
         <div class="card">
-          <img alt="" src="images/ship.svg">
+          <img alt="ship" src="images/ship.svg">
           <h2>Heave Ho!</h2>
           <p>Weigh anchor and hoist the mizzen, ya old salt, aboard shipshape <i>Arrrgonaut</i>.</p>
           <a href="#">See the specs</a>
