Add tags to html

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
   </main>
 
   <footer>
-    <div class="footer">
+    <div class="footer" role="contentinfo">
       <p>© Arrrgene’s Treasure Tours</p>
     </div>
   </footer>
