--- a/index.html
+++ b/index.html
@@ -30,23 +30,27 @@
   <main>
     <div role="main">
 
-      <div class="banner">
-        <img alt="banner" src="images/banner.jpg">
-        <div>
-          <h2>Ahoy, me Hearties!</h2>
-          <p>Batten down the hatches and sail me corsair to plentiful doubloons.</p>
-          <a href="#">Book a tour</a>
+      <section>
+        <div class="banner">
+          <img alt="banner" src="images/banner.jpg">
+          <div>
+            <h2>Ahoy, me Hearties!</h2>
+            <p>Batten down the hatches and sail me corsair to plentiful doubloons.</p>
+            <a href="#">Book a tour</a>
+          </div>
         </div>
-      </div>
+      </section>
 
-      <div class="ship">
-        <div class="card">
-          <img alt="ship" src="images/ship.svg">
-          <h2>Heave Ho!</h2>
-          <p>Weigh anchor and hoist the mizzen, ya old salt, aboard shipshape <i>Arrrgonaut</i>.</p>
-          <a href="#">See the specs</a>
+      <section>
+        <div class="ship">
+          <div class="card">
+            <img alt="ship" src="images/ship.svg">
+            <h2>Heave Ho!</h2>
+            <p>Weigh anchor and hoist the mizzen, ya old salt, aboard shipshape <i>Arrrgonaut</i>.</p>
+            <a href="#">See the specs</a>
+          </div>
         </div>
-      </div>
+      </section>
 
     </div>
   </main>
